[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/main_screen/main_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/mortal_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gamepad/gamepad.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/tileset_cave_monochrome.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/resources/brick-tileset.tres" type="TileSet" id=5]
[ext_resource path="res://scenes/ScreenCamera/ScreenCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/rooms_grid/rooms_grid.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/checkpoint/checkpoint.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/spikes_tile_map/spikes_tile_map.tscn" type="PackedScene" id=9]

[node name="MainScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="TileMapBackground" type="TileMap" parent="LevelContainer"]
visible = false
modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
occluder_light_mask = 0
format = 1
tile_data = PoolIntArray( 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 5, 0, 196623, 5, 0, 262144, 5, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 5, 0, 262159, 5, 0, 327680, 5, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 5, 0, 327693, 5, 0, 327694, 5, 0, 327695, 5, 0, 393216, 5, 0, 393217, 5, 0, 393218, 5, 0, 393219, 5, 0, 393220, 5, 0, 393221, 5, 0, 393222, 5, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 393230, 5, 0, 393231, 5, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 458766, 5, 0, 458767, 5, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 589824, 5, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 5, 0, 589831, 5, 0, 589832, 5, 0, 589833, 5, 0, 589834, 5, 0, 589835, 5, 0, 589836, 5, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 655360, 5, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 5, 0, 655366, 5, 0, 655367, 5, 0, 655368, 5, 0, 655369, 5, 0, 655370, 5, 0, 655371, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 786432, 5, 0, 786433, 5, 0, 786434, 5, 0, 786435, 5, 0, 786436, 5, 0, 786437, 5, 0, 786438, 5, 0, 786439, 5, 0, 786440, 5, 0, 786441, 5, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 851968, 5, 0, 851969, 5, 0, 851970, 5, 0, 851971, 5, 0, 851972, 5, 0, 851973, 5, 0, 851974, 5, 0, 851975, 5, 0, 851976, 5, 0, 851977, 5, 0, 851978, 5, 0, 851979, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 851983, 5, 0, 917504, 5, 0, 917505, 5, 0, 917506, 5, 0, 917507, 5, 0, 917508, 5, 0, 917509, 5, 0, 917510, 5, 0, 917511, 5, 0, 917512, 5, 0, 917513, 5, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 983040, 5, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983045, 5, 0, 983046, 5, 0, 983047, 5, 0, 983048, 5, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 1048576, 5, 0, 1048577, 5, 0, 1048578, 5, 0, 1048579, 5, 0, 1048580, 5, 0, 1048581, 5, 0, 1048582, 5, 0, 1048583, 5, 0, 1048584, 5, 0, 1048585, 5, 0, 1048586, 5, 0, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1114112, 5, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114116, 5, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 5, 0, 1114120, 5, 0, 1114121, 5, 0, 1114122, 5, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1179648, 5, 0, 1179649, 5, 0, 1179650, 5, 0, 1179651, 5, 0, 1179652, 5, 0, 1179653, 5, 0, 1179654, 5, 0, 1179655, 5, 0, 1179656, 5, 0, 1179657, 5, 0, 1179658, 5, 0, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1245184, 5, 0, 1245185, 5, 0, 1245186, 5, 0, 1245187, 5, 0, 1245188, 5, 0, 1245189, 5, 0, 1245190, 5, 0, 1245191, 5, 0, 1245192, 5, 0, 1245193, 5, 0, 1245194, 5, 0, 1245195, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1310720, 5, 0, 1310721, 5, 0, 1310722, 5, 0, 1310723, 5, 0, 1310724, 5, 0, 1310725, 5, 0, 1310726, 5, 0, 1310727, 5, 0, 1310728, 5, 0, 1310729, 5, 0, 1310730, 5, 0, 1310731, 5, 0, 1310732, 5, 0, 1310733, 5, 0, 1310734, 5, 0, 1310735, 5, 0, 1376256, 5, 0, 1376257, 5, 0, 1376258, 5, 0, 1376259, 5, 0, 1376260, 5, 0, 1376261, 5, 0, 1376262, 5, 0, 1376263, 5, 0, 1376264, 5, 0, 1376265, 5, 0, 1376266, 5, 0, 1376267, 5, 0, 1376268, 5, 0, 1376269, 5, 0, 1376270, 5, 0, 1376271, 5, 0, 1441792, 5, 0, 1441793, 5, 0, 1441794, 5, 0, 1441795, 5, 0, 1441796, 5, 0, 1441797, 5, 0, 1441798, 5, 0, 1441799, 5, 0, 1441800, 5, 0, 1441801, 5, 0, 1441802, 5, 0, 1441803, 5, 0, 1441804, 5, 0, 1441805, 5, 0, 1441806, 5, 0, 1441807, 5, 0, 1507328, 5, 0, 1507329, 5, 0, 1507330, 5, 0, 1507331, 5, 0, 1507332, 5, 0, 1507333, 5, 0, 1507334, 5, 0, 1507335, 5, 0, 1507336, 5, 0, 1507337, 5, 0, 1507338, 5, 0, 1507339, 5, 0, 1507340, 5, 0, 1507341, 5, 0, 1507342, 5, 0, 1507343, 5, 0 )

[node name="TileMap" type="TileMap" parent="LevelContainer"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 196609, -65536, 0, 3, -65535, 0, 3, -65534, 0, 3, -65533, 0, 3, -65532, 0, 3, -65531, 0, 3, -65530, 0, 3, -65529, 0, 3, -65528, 0, 3, -65527, 0, 3, -65526, 0, 3, -65525, 0, 3, -65524, 0, 3, -65523, 0, 3, -65522, 0, 3, -65521, 0, 3, -65520, 0, 0, 65535, 0, 1, 0, 0, 65539, 1, 0, 131073, 2, 0, 131073, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 131073, 8, 0, 131073, 9, 0, 131074, 10, 0, 65538, 11, 0, 65538, 12, 0, 65538, 13, 0, 65538, 14, 0, 65538, 15, 0, 65538, 16, 0, 2, 17, 0, 3, 18, 0, 0, 131071, 0, 1, 65536, 0, 131075, 65545, 0, 131072, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131074, 65549, 0, 65538, 65550, 0, 65538, 65551, 0, 65538, 65552, 0, 65538, 65553, 0, 65538, 65554, 0, 131075, 196607, 0, 1, 131072, 0, 131075, 131084, 0, 1, 131085, 0, 65538, 131086, 0, 65538, 131087, 0, 65538, 131088, 0, 65538, 131089, 0, 65538, 131090, 0, 131075, 262143, 0, 1, 196608, 0, 131075, 196620, 0, 131072, 196621, 0, 131073, 196622, 0, 131073, 196623, 0, 131074, 196624, 0, 65538, 196625, 0, 65538, 196626, 0, 2, 196627, 0, 3, 196628, 0, 3, 196629, 0, 3, 196630, 0, 3, 196631, 0, 3, 196632, 0, 3, 196633, 0, 3, 196634, 0, 3, 196635, 0, 3, 196636, 0, 0, 196670, 0, 196609, 196671, 0, 3, 196672, 0, 3, 196673, 0, 0, 327679, 0, 1, 262144, 0, 131075, 262159, 0, 1, 262160, 0, 65538, 262161, 0, 65538, 262162, 0, 65538, 262163, 0, 65538, 262164, 0, 65538, 262165, 0, 65538, 262166, 0, 65538, 262167, 0, 65538, 262168, 0, 65538, 262169, 0, 65538, 262170, 0, 65538, 262171, 0, 65538, 262172, 0, 2, 262173, 0, 3, 262174, 0, 3, 262175, 0, 3, 262176, 0, 3, 262177, 0, 3, 262178, 0, 0, 262206, 0, 1, 262207, 0, 65538, 262208, 0, 65538, 262209, 0, 131075, 393215, 0, 1, 327680, 0, 131075, 327695, 0, 1, 327696, 0, 65538, 327697, 0, 65538, 327698, 0, 65538, 327699, 0, 65538, 327700, 0, 65538, 327701, 0, 65538, 327702, 0, 65538, 327703, 0, 65538, 327704, 0, 65538, 327705, 0, 65538, 327706, 0, 65538, 327707, 0, 65538, 327708, 0, 65538, 327709, 0, 65538, 327710, 0, 65538, 327711, 0, 65538, 327712, 0, 65538, 327713, 0, 65538, 327714, 0, 131075, 327742, 0, 1, 327743, 0, 65538, 327744, 0, 65538, 327745, 0, 131075, 458751, 0, 1, 393216, 0, 131075, 393231, 0, 1, 393232, 0, 65538, 393233, 0, 65538, 393234, 0, 65538, 393235, 0, 65538, 393236, 0, 65538, 393237, 0, 65539, 393238, 0, 131073, 393239, 0, 131074, 393240, 0, 65538, 393241, 0, 65538, 393242, 0, 65538, 393243, 0, 65538, 393244, 0, 65538, 393245, 0, 65538, 393246, 0, 65538, 393247, 0, 65538, 393248, 0, 65538, 393249, 0, 65538, 393250, 0, 131075, 393278, 0, 1, 393279, 0, 65538, 393280, 0, 65538, 393281, 0, 131075, 524287, 0, 1, 458752, 0, 131075, 458767, 0, 1, 458768, 0, 65538, 458769, 0, 65538, 458770, 0, 65538, 458771, 0, 65539, 458772, 0, 131073, 458773, 0, 196611, 458775, 0, 131072, 458776, 0, 131074, 458777, 0, 65538, 458778, 0, 65539, 458779, 0, 131073, 458780, 0, 131073, 458781, 0, 131074, 458782, 0, 65538, 458783, 0, 65538, 458784, 0, 65538, 458785, 0, 65538, 458786, 0, 131075, 458814, 0, 1, 458815, 0, 65538, 458816, 0, 65538, 458817, 0, 131075, 589823, 0, 1, 524288, 0, 131075, 524303, 0, 1, 524304, 0, 65538, 524305, 0, 65538, 524306, 0, 65539, 524307, 0, 196611, 524312, 0, 131072, 524313, 0, 131073, 524314, 0, 196611, 524317, 0, 1, 524318, 0, 65538, 524319, 0, 65538, 524320, 0, 65538, 524321, 0, 65538, 524322, 0, 131075, 524350, 0, 1, 524351, 0, 65538, 524352, 0, 65538, 524353, 0, 131075, 655359, 0, 1, 589824, 0, 131075, 589839, 0, 131072, 589840, 0, 131073, 589841, 0, 131073, 589842, 0, 196611, 589853, 0, 131072, 589854, 0, 131073, 589855, 0, 131074, 589856, 0, 65538, 589857, 0, 65538, 589858, 0, 131075, 589886, 0, 1, 589887, 0, 65538, 589888, 0, 65538, 589889, 0, 131075, 589901, 0, 196609, 589902, 0, 3, 589903, 0, 3, 589904, 0, 3, 589905, 0, 3, 589906, 0, 3, 589907, 0, 0, 720895, 0, 1, 655360, 0, 131075, 655391, 0, 131072, 655392, 0, 131073, 655393, 0, 131073, 655394, 0, 196611, 655422, 0, 1, 655423, 0, 65538, 655424, 0, 65538, 655425, 0, 131075, 655437, 0, 1, 655438, 0, 65538, 655439, 0, 65538, 655440, 0, 65538, 655441, 0, 65538, 655442, 0, 65538, 655443, 0, 131075, 786431, 0, 1, 720896, 0, 131075, 720957, 0, 196609, 720958, 0, 65537, 720959, 0, 65538, 720960, 0, 65538, 720961, 0, 2, 720962, 0, 3, 720963, 0, 3, 720964, 0, 3, 720965, 0, 3, 720966, 0, 3, 720967, 0, 3, 720968, 0, 0, 720969, 2, 0, 720970, 3, 0, 720971, 2, 0, 720972, 3, 0, 720973, 0, 1, 720974, 0, 65538, 720975, 0, 65538, 720976, 0, 65538, 720977, 0, 65538, 720978, 0, 65538, 720979, 0, 131075, 851967, 0, 1, 786432, 0, 131075, 786493, 0, 1, 786494, 0, 65538, 786495, 0, 65538, 786496, 0, 65538, 786497, 0, 65538, 786498, 0, 65538, 786499, 0, 65538, 786500, 0, 65538, 786501, 0, 65538, 786502, 0, 65538, 786503, 0, 65538, 786504, 0, 131075, 786505, 4, 0, 786506, 5, 0, 786507, 4, 0, 786508, 5, 0, 786509, 0, 1, 786510, 0, 65538, 786511, 0, 65538, 786512, 0, 65538, 786513, 0, 65538, 786514, 0, 65538, 786515, 0, 131075, 917503, 0, 1, 851968, 0, 131075, 851988, 1, 0, 852029, 0, 1, 852030, 0, 65538, 852031, 0, 65538, 852032, 0, 65538, 852033, 0, 65538, 852034, 0, 65538, 852035, 0, 65538, 852036, 0, 65538, 852037, 0, 65538, 852038, 0, 65538, 852039, 0, 65538, 852040, 0, 131075, 852041, 4, 0, 852042, 5, 0, 852043, 4, 0, 852044, 5, 0, 852045, 0, 1, 852046, 0, 65538, 852047, 0, 65538, 852048, 0, 65538, 852049, 0, 65538, 852050, 0, 65538, 852051, 0, 131075, 983039, 0, 1, 917504, 0, 131075, 917522, 0, 196609, 917523, 0, 3, 917524, 0, 3, 917525, 0, 3, 917526, 0, 0, 917565, 0, 1, 917566, 0, 65538, 917567, 0, 65538, 917568, 0, 65538, 917569, 0, 65538, 917570, 0, 65538, 917571, 0, 65538, 917572, 0, 65538, 917573, 0, 65538, 917574, 0, 65538, 917575, 0, 65538, 917576, 0, 131075, 917577, 4, 0, 917578, 5, 0, 917579, 4, 0, 917580, 5, 0, 917581, 0, 1, 917582, 0, 65538, 917583, 0, 65538, 917584, 0, 65538, 917585, 0, 65538, 917586, 0, 65538, 917587, 0, 131075, 1048575, 0, 1, 983040, 0, 2, 983041, 0, 3, 983042, 0, 3, 983043, 0, 3, 983044, 0, 0, 983057, 0, 196609, 983058, 0, 65537, 983059, 0, 65539, 983060, 0, 131073, 983061, 0, 131073, 983062, 0, 196611, 983101, 0, 131072, 983102, 0, 131073, 983103, 0, 131073, 983104, 0, 131073, 983105, 0, 131073, 983106, 0, 131073, 983107, 0, 131073, 983108, 0, 131073, 983109, 0, 131073, 983110, 0, 131073, 983111, 0, 131073, 983112, 0, 196611, 983113, 4, 0, 983114, 5, 0, 983115, 4, 0, 983116, 5, 0, 983117, 0, 1, 983118, 0, 65538, 983119, 0, 65538, 983120, 0, 65538, 983121, 0, 65538, 983122, 0, 65538, 983123, 0, 131075, 1114111, 0, 1, 1048576, 0, 65539, 1048577, 0, 131073, 1048578, 0, 131073, 1048579, 0, 131073, 1048580, 0, 196611, 1048592, 0, 196609, 1048593, 0, 65537, 1048594, 0, 65539, 1048595, 0, 196611, 1048620, 2, 0, 1048621, 3, 0, 1048634, 2, 0, 1048635, 3, 0, 1048649, 4, 0, 1048650, 5, 0, 1048651, 4, 0, 1048652, 5, 0, 1048653, 0, 131072, 1048654, 0, 131073, 1048655, 0, 131073, 1048656, 0, 131073, 1048657, 0, 131073, 1048658, 0, 131073, 1048659, 0, 196611, 1179647, 0, 1, 1114112, 0, 131075, 1114127, 0, 196609, 1114128, 0, 65537, 1114129, 0, 65539, 1114130, 0, 196611, 1114156, 4, 0, 1114157, 5, 0, 1114158, 0, 196609, 1114159, 0, 3, 1114160, 0, 3, 1114161, 0, 3, 1114162, 0, 3, 1114163, 0, 3, 1114164, 0, 3, 1114165, 0, 3, 1114166, 0, 3, 1114167, 0, 3, 1114168, 0, 3, 1114169, 0, 0, 1114170, 4, 0, 1114171, 5, 0, 1114185, 4, 0, 1114186, 5, 0, 1114187, 4, 0, 1114188, 5, 0, 1245183, 0, 1, 1179648, 0, 131075, 1179659, 0, 196609, 1179660, 0, 3, 1179661, 0, 3, 1179662, 0, 3, 1179663, 0, 65537, 1179664, 0, 65539, 1179665, 0, 196611, 1179692, 4, 0, 1179693, 5, 0, 1179694, 0, 1, 1179695, 0, 65538, 1179696, 0, 65538, 1179697, 0, 65538, 1179698, 0, 65538, 1179699, 0, 65538, 1179700, 0, 65538, 1179701, 0, 65538, 1179702, 0, 65538, 1179703, 0, 65538, 1179704, 0, 65538, 1179705, 0, 131075, 1179706, 4, 0, 1179707, 5, 0, 1179721, 4, 0, 1179722, 5, 0, 1179723, 4, 0, 1179724, 5, 0, 1310719, 0, 1, 1245184, 0, 131075, 1245195, 0, 131072, 1245196, 0, 131073, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131073, 1245200, 0, 196611, 1245228, 4, 0, 1245229, 5, 0, 1245230, 0, 1, 1245231, 0, 65538, 1245232, 0, 65538, 1245233, 0, 65538, 1245234, 0, 65538, 1245235, 0, 65538, 1245236, 0, 65538, 1245237, 0, 65538, 1245238, 0, 65538, 1245239, 0, 65538, 1245240, 0, 65538, 1245241, 0, 131075, 1245242, 4, 0, 1245243, 5, 0, 1245246, 0, 196609, 1245247, 0, 3, 1245248, 0, 3, 1245249, 0, 3, 1245250, 0, 3, 1245251, 0, 3, 1245252, 0, 3, 1245253, 0, 3, 1245254, 0, 3, 1245255, 0, 3, 1245256, 0, 3, 1245257, 0, 3, 1245258, 0, 3, 1245259, 0, 3, 1245260, 0, 3, 1245261, 0, 3, 1245262, 0, 3, 1245263, 0, 3, 1245264, 0, 3, 1245265, 0, 3, 1245266, 0, 3, 1245267, 0, 3, 1245268, 0, 3, 1245269, 0, 3, 1245270, 0, 0, 1376255, 0, 1, 1310720, 0, 131075, 1310756, 0, 196609, 1310757, 0, 3, 1310758, 0, 3, 1310759, 0, 3, 1310760, 0, 3, 1310761, 0, 3, 1310762, 0, 3, 1310763, 0, 0, 1310764, 4, 0, 1310765, 5, 0, 1310766, 0, 1, 1310767, 0, 65538, 1310768, 0, 65538, 1310769, 0, 65538, 1310770, 0, 65538, 1310771, 0, 65538, 1310772, 0, 65538, 1310773, 0, 65538, 1310774, 0, 65538, 1310775, 0, 65538, 1310776, 0, 65538, 1310777, 0, 131075, 1310778, 4, 0, 1310779, 5, 0, 1310782, 0, 1, 1310783, 0, 65538, 1310784, 0, 65538, 1310785, 0, 65538, 1310786, 0, 65538, 1310787, 0, 65538, 1310788, 0, 65538, 1310789, 0, 65538, 1310790, 0, 65538, 1310791, 0, 65538, 1310792, 0, 65538, 1310793, 0, 65538, 1310794, 0, 65538, 1310795, 0, 65538, 1310796, 0, 65538, 1310797, 0, 65538, 1310798, 0, 65538, 1310799, 0, 65538, 1310800, 0, 65538, 1310801, 0, 65538, 1310802, 0, 65538, 1310803, 0, 65538, 1310804, 0, 65538, 1310805, 0, 65538, 1310806, 0, 131075, 1441791, 0, 1, 1376256, 0, 131075, 1376292, 0, 1, 1376293, 0, 65538, 1376294, 0, 65538, 1376295, 0, 65538, 1376296, 0, 65538, 1376297, 0, 65538, 1376298, 0, 65538, 1376299, 0, 131075, 1376300, 4, 0, 1376301, 5, 0, 1376302, 0, 1, 1376303, 0, 65538, 1376304, 0, 65538, 1376305, 0, 65538, 1376306, 0, 65538, 1376307, 0, 65538, 1376308, 0, 65538, 1376309, 0, 65538, 1376310, 0, 65538, 1376311, 0, 65538, 1376312, 0, 65538, 1376313, 0, 131075, 1376314, 4, 0, 1376315, 5, 0, 1376318, 0, 1, 1376319, 0, 65538, 1376320, 0, 65538, 1376321, 0, 65538, 1376322, 0, 65538, 1376323, 0, 65538, 1376324, 0, 65538, 1376325, 0, 65538, 1376326, 0, 65538, 1376327, 0, 65538, 1376328, 0, 65538, 1376329, 0, 65538, 1376330, 0, 65538, 1376331, 0, 65538, 1376332, 0, 65538, 1376333, 0, 65538, 1376334, 0, 65538, 1376335, 0, 65538, 1376336, 0, 65538, 1376337, 0, 65538, 1376338, 0, 65538, 1376339, 0, 65538, 1376340, 0, 65538, 1376341, 0, 65538, 1376342, 0, 131075, 1507327, 0, 1, 1441792, 0, 2, 1441793, 0, 0, 1441820, 0, 196609, 1441821, 0, 3, 1441822, 0, 3, 1441823, 0, 3, 1441824, 0, 3, 1441825, 0, 3, 1441826, 0, 3, 1441827, 0, 3, 1441828, 0, 65537, 1441829, 0, 65538, 1441830, 0, 65538, 1441831, 0, 65538, 1441832, 0, 65538, 1441833, 0, 65538, 1441834, 0, 65538, 1441835, 0, 131075, 1441836, 4, 0, 1441837, 5, 0, 1441838, 0, 1, 1441839, 0, 65538, 1441840, 0, 65538, 1441841, 0, 65538, 1441842, 0, 65538, 1441843, 0, 65538, 1441844, 0, 65538, 1441845, 0, 65538, 1441846, 0, 65538, 1441847, 0, 65538, 1441848, 0, 65538, 1441849, 0, 131075, 1441850, 4, 0, 1441851, 5, 0, 1441854, 0, 1, 1441855, 0, 65538, 1441856, 0, 65538, 1441857, 0, 65538, 1441858, 0, 65538, 1441859, 0, 65538, 1441860, 0, 65538, 1441861, 0, 65538, 1441862, 0, 65538, 1441863, 0, 65538, 1441864, 0, 65538, 1441865, 0, 65538, 1441866, 0, 65538, 1441867, 0, 65538, 1441868, 0, 65538, 1441869, 0, 65538, 1441870, 0, 65538, 1441871, 0, 65538, 1441872, 0, 65539, 1441873, 0, 131073, 1441874, 0, 131073, 1441875, 0, 131073, 1441876, 0, 131073, 1441877, 0, 131073, 1441878, 0, 196611, 1572863, 0, 1, 1507328, 0, 65538, 1507329, 0, 2, 1507330, 0, 3, 1507331, 0, 3, 1507332, 0, 3, 1507333, 0, 3, 1507334, 0, 3, 1507335, 0, 3, 1507336, 0, 3, 1507337, 0, 3, 1507338, 0, 3, 1507339, 0, 3, 1507340, 0, 3, 1507341, 0, 3, 1507342, 0, 3, 1507343, 0, 3, 1507344, 0, 3, 1507345, 0, 3, 1507346, 0, 3, 1507347, 0, 3, 1507348, 0, 3, 1507349, 0, 3, 1507350, 0, 3, 1507351, 0, 3, 1507352, 0, 3, 1507353, 0, 0, 1507356, 0, 1, 1507357, 0, 65538, 1507358, 0, 65538, 1507359, 0, 65539, 1507360, 0, 131073, 1507361, 0, 131073, 1507362, 0, 131073, 1507363, 0, 131073, 1507364, 0, 131073, 1507365, 0, 131073, 1507366, 0, 131073, 1507367, 0, 131073, 1507368, 0, 131073, 1507369, 0, 131074, 1507370, 0, 65539, 1507371, 0, 196611, 1507372, 4, 0, 1507373, 5, 0, 1507374, 0, 1, 1507375, 0, 65538, 1507376, 0, 65538, 1507377, 0, 65538, 1507378, 0, 65538, 1507379, 0, 65538, 1507380, 0, 65538, 1507381, 0, 65538, 1507382, 0, 65538, 1507383, 0, 65538, 1507384, 0, 65538, 1507385, 0, 131075, 1507386, 4, 0, 1507387, 5, 0, 1507390, 0, 131072, 1507391, 0, 131073, 1507392, 0, 131073, 1507393, 0, 131073, 1507394, 0, 131073, 1507395, 0, 131073, 1507396, 0, 131074, 1507397, 0, 65538, 1507398, 0, 65538, 1507399, 0, 65538, 1507400, 0, 65538, 1507401, 0, 65539, 1507402, 0, 131073, 1507403, 0, 131073, 1507404, 0, 131073, 1507405, 0, 131073, 1507406, 0, 131073, 1507407, 0, 131073, 1507408, 0, 196611, 1638399, 0, 131072, 1572864, 0, 131073, 1572865, 0, 131073, 1572866, 0, 131073, 1572867, 0, 131073, 1572868, 0, 131073, 1572869, 0, 131073, 1572870, 0, 131073, 1572871, 0, 131073, 1572872, 0, 131073, 1572873, 0, 131073, 1572874, 0, 131073, 1572875, 0, 131073, 1572876, 0, 131073, 1572877, 0, 131073, 1572878, 0, 131073, 1572879, 0, 131073, 1572880, 0, 131073, 1572881, 0, 131073, 1572882, 0, 131073, 1572883, 0, 131073, 1572884, 0, 131073, 1572885, 0, 131073, 1572886, 0, 131073, 1572887, 0, 131073, 1572888, 0, 131074, 1572889, 0, 2, 1572890, 0, 3, 1572891, 0, 3, 1572892, 0, 65537, 1572893, 0, 65539, 1572894, 0, 131073, 1572895, 0, 196611, 1572905, 0, 1, 1572906, 0, 131075, 1572908, 4, 0, 1572909, 5, 0, 1572910, 0, 1, 1572911, 0, 65538, 1572912, 0, 65538, 1572913, 0, 65538, 1572914, 0, 65538, 1572915, 0, 65538, 1572916, 0, 65538, 1572917, 0, 65538, 1572918, 0, 65538, 1572919, 0, 65538, 1572920, 0, 65538, 1572921, 0, 131075, 1572922, 4, 0, 1572923, 5, 0, 1572932, 0, 1, 1572933, 0, 65538, 1572934, 0, 65538, 1572935, 0, 65538, 1572936, 0, 65538, 1572937, 0, 131075, 1638424, 0, 131072, 1638425, 0, 131073, 1638426, 0, 131073, 1638427, 0, 131073, 1638428, 0, 131073, 1638429, 0, 196611, 1638441, 0, 1, 1638442, 0, 131075, 1638444, 4, 0, 1638445, 5, 0, 1638446, 0, 1, 1638447, 0, 65538, 1638448, 0, 65538, 1638449, 0, 65538, 1638450, 0, 65538, 1638451, 0, 65538, 1638452, 0, 65538, 1638453, 0, 65538, 1638454, 0, 65538, 1638455, 0, 65538, 1638456, 0, 65538, 1638457, 0, 131075, 1638458, 4, 0, 1638459, 5, 0, 1638468, 0, 1, 1638469, 0, 65538, 1638470, 0, 65538, 1638471, 0, 65538, 1638472, 0, 65538, 1638473, 0, 131075, 1703977, 0, 1, 1703978, 0, 131075, 1703980, 4, 0, 1703981, 5, 0, 1703982, 0, 1, 1703983, 0, 65538, 1703984, 0, 65538, 1703985, 0, 65538, 1703986, 0, 65538, 1703987, 0, 65538, 1703988, 0, 65538, 1703989, 0, 65538, 1703990, 0, 65538, 1703991, 0, 65538, 1703992, 0, 65538, 1703993, 0, 131075, 1703994, 4, 0, 1703995, 5, 0, 1704004, 0, 1, 1704005, 0, 65538, 1704006, 0, 65538, 1704007, 0, 65538, 1704008, 0, 65538, 1704009, 0, 131075, 1769513, 0, 1, 1769514, 0, 131075, 1769516, 4, 0, 1769517, 5, 0, 1769518, 0, 131072, 1769519, 0, 131073, 1769520, 0, 131073, 1769521, 0, 131073, 1769522, 0, 131073, 1769523, 0, 131073, 1769524, 0, 131073, 1769525, 0, 131073, 1769526, 0, 131073, 1769527, 0, 131073, 1769528, 0, 131073, 1769529, 0, 196611, 1769530, 4, 0, 1769531, 5, 0, 1769540, 0, 1, 1769541, 0, 65538, 1769542, 0, 65538, 1769543, 0, 65538, 1769544, 0, 65538, 1769545, 0, 131075, 1835049, 0, 1, 1835050, 0, 131075, 1835052, 4, 0, 1835053, 5, 0, 1835066, 4, 0, 1835067, 5, 0, 1835076, 0, 1, 1835077, 0, 65538, 1835078, 0, 65538, 1835079, 0, 65538, 1835080, 0, 65538, 1835081, 0, 131075, 1900585, 0, 1, 1900586, 0, 131075, 1900588, 4, 0, 1900589, 5, 0, 1900602, 4, 0, 1900603, 5, 0, 1900612, 0, 1, 1900613, 0, 65538, 1900614, 0, 65538, 1900615, 0, 65538, 1900616, 0, 65538, 1900617, 0, 131075, 1966118, 0, 196609, 1966119, 0, 3, 1966120, 0, 3, 1966121, 0, 65537, 1966122, 0, 2, 1966123, 0, 3, 1966124, 0, 3, 1966125, 0, 3, 1966126, 0, 3, 1966127, 0, 3, 1966128, 0, 3, 1966129, 0, 3, 1966130, 0, 3, 1966131, 0, 3, 1966132, 0, 3, 1966133, 0, 3, 1966134, 0, 3, 1966135, 0, 3, 1966136, 0, 3, 1966137, 0, 3, 1966138, 0, 3, 1966139, 0, 3, 1966140, 0, 3, 1966141, 0, 3, 1966142, 0, 3, 1966143, 0, 0, 1966148, 0, 1, 1966149, 0, 65538, 1966150, 0, 65538, 1966151, 0, 65538, 1966152, 0, 65538, 1966153, 0, 131075, 2031654, 0, 131072, 2031655, 0, 131073, 2031656, 0, 131073, 2031657, 0, 131073, 2031658, 0, 131073, 2031659, 0, 131073, 2031660, 0, 131073, 2031661, 0, 131073, 2031662, 0, 131073, 2031663, 0, 131073, 2031664, 0, 131073, 2031665, 0, 131073, 2031666, 0, 131073, 2031667, 0, 131073, 2031668, 0, 131073, 2031669, 0, 131073, 2031670, 0, 131073, 2031671, 0, 131073, 2031672, 0, 131073, 2031673, 0, 131073, 2031674, 0, 131073, 2031675, 0, 131073, 2031676, 0, 131073, 2031677, 0, 131073, 2031678, 0, 131073, 2031679, 0, 196611, 2031684, 0, 131072, 2031685, 0, 131073, 2031686, 0, 131073, 2031687, 0, 131073, 2031688, 0, 131073, 2031689, 0, 196611 )

[node name="SpikesTileMap" parent="LevelContainer" instance=ExtResource( 9 )]
tile_data = PoolIntArray( 3145780, 0, 0, 3145781, 1, 0, 3145782, 0, 0, 3145783, 1, 0, 12059166, 0, 0, 12059167, 0, 0, 12059168, 0, 0, 12059169, 0, 0, 12059170, 0, 0 )

[node name="Checkpoints" type="Node2D" parent="."]

[node name="Checkpoint" parent="Checkpoints" instance=ExtResource( 8 )]
position = Vector2( 648, 719 )

[node name="Checkpoint2" parent="Checkpoints" instance=ExtResource( 8 )]
position = Vector2( 1101, 692 )

[node name="Checkpoint3" parent="Checkpoints" instance=ExtResource( 8 )]
position = Vector2( 1970, 937 )

[node name="Player" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
position = Vector2( 111, 694 )
jump_force = 1000.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Gamepad" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_top = 765.0

[node name="NewGameButton" type="Button" parent="CanvasLayer"]
margin_left = 110.0
margin_top = 1.0
margin_right = 122.0
margin_bottom = 21.0
text = "New game"

[node name="ScreenCamera" parent="." instance=ExtResource( 6 )]
target = NodePath("../Player")
screen_size = Vector2( 512, 1024 )

[node name="RoomsGrid" parent="." instance=ExtResource( 7 )]
y_step = 1024
grid_color = Color( 1, 0, 0, 0.686275 )
line_width = 5

[connection signal="save" from="Checkpoints/Checkpoint" to="." method="_on_Checkpoint_save"]
[connection signal="save" from="Checkpoints/Checkpoint2" to="." method="_on_Checkpoint_save"]
[connection signal="save" from="Checkpoints/Checkpoint3" to="." method="_on_Checkpoint_save"]
[connection signal="destroyed" from="Player" to="." method="_on_Player_destroyed"]
[connection signal="pressed" from="CanvasLayer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
